tests/neg-custom-args/captures/i15923.check
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/i15923.scala:12:21 ---------------------------------------
12 |  val leak = withCap(cap => mkId(cap)) // error
   |                     ^^^^^^^^^^^^^^^^
   |Capability `fresh` outlives its scope: it leaks into outer capture set 's1 which is owned by value leak.
   |The leakage occurred when trying to match the following types:
   |
   |Found:    (lcap: scala.caps.Capability^) ?->'s2 Cap^'s3 ->'s4 Id[Cap^'s5]^'s6
   |Required: (lcap²: scala.caps.Capability^) ?-> Cap^{lcap²} => Id[Cap^'s1]^'s7
   |
   |where:    =>    refers to a root capability created in value leak when checking argument to parameter op of method withCap
   |          ^     refers to the root capability caps.any
   |          fresh is a root capability associated with the result type of (x$0: Cap^'s3): Id[Cap^'s5]^'s6
   |          lcap  is a reference to a value parameter
   |          lcap² is a reference to a value parameter
   |
   | longer explanation available when compiling with `-explain`
